# relaanalytics

./: .env.example  .gitignore  .replit  COMPREHENSIVE_DOCUMENTATION.md  DEPLOYMENT_LOG.md  Dockerfile  LICENSE  README.md  VISUAL_IMPROVEMENTS.md  analytics.py  app.py  dashboard.py  data_generator.py  data_persistence.py  docker-compose.yml  forecasting_engine.py  ml_model_manager.py  pyproject.toml  replit.md  requirements.txt  translations.py
.streamlit/: config.toml
assets/: rela_background_placeholder.txt
config/: __init__.py  settings.py
docs/: README.md
src/: __init__.py
src/core/: __init__.py  ai_report_generator.py  chatbot.py  dashboard.py  floating_chatbot.py  predictive_analytics.py  simple_chatbot.py
src/utils/: __init__.py  data_generator.py  data_persistence.py  translations.py
